HighContrast: Correctly select window decoration
We need

    .window-classes decoration

but within the decoration parent selector, we were doing
&.window-classes, which gave us

    decoration.window classes

We need to fix this by selecting on .window-classes &

https://bugzilla.gnome.org/show_bug.cgi?id=788496

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -3238,21 +3238,23 @@ decoration {
                 0 3px 9px 1px transparent,
                 0 0 0 1px $_wm_border_backdrop;
   }
-  &.tiled {
+
+  .tiled & {
     border-radius: 0;
   }
-  &.csd {
-    &.popup {
-      border-radius: 0;
-      box-shadow: 0 1px 2px transparentize(black, 0.8),
-                  0 0 0 1px transparentize($_wm_border,0.1);
-    }
-    &.tooltip {
-      border-radius: 5px;
-      box-shadow: none;
-    }
+
+  .csd.popup & {
+    border-radius: 0;
+    box-shadow: 0 1px 2px transparentize(black, 0.8),
+                0 0 0 1px transparentize($_wm_border,0.1);
   }
-  &.solid-csd {
+
+  .tooltip & {
+    border-radius: 5px;
+    box-shadow: none;
+  }
+
+  .solid-csd & {
     border-radius: 0;
     margin: 4px;
     background-color: $backdrop_bg_color;
